--- a/1 Spring Boot/lection2/src/main/resources/templates/test.html
+++ b/1 Spring Boot/lection2/src/main/resources/templates/test.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <body>
 
-New message is: <span th:text="${message}"></span>
+New Message is: <span th:text="${message}"></span>
 
 </body>
 </html>
