--- a/2 Workshop/src/main/resources/templates/fragments/nav.html
+++ b/2 Workshop/src/main/resources/templates/fragments/nav.html
@@ -27,8 +27,8 @@
                                         Admin
                                     </a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                        <a class="dropdown-item" href="/exercises/add">Add Exercise</a>
-                                        <a class="dropdown-item" href="/roles/add">Add Role</a>
+                                        <a class="dropdown-item" href="/exercise/add">Add Exercise</a>
+                                        <a class="dropdown-item" href="/role/add">Add Role</a>
 
                                     </div>
                                 </li>
